小程序的窗口配置：window

--- a/app.json
+++ b/app.json
@@ -1,5 +1,13 @@
 {
   "pages": [
     "pages/index/index"
-  ]
+  ],
+  "window": {
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "ninghao.net",
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh": true,
+    "backgroundTextStyle": "dark",
+    "backgroundColor": "#ededed"
+  }
 }
